# basic_database

./: .gitignore  CMakeLists.txt  ReadMe  ReadMe.md  db  install  run.sh  scheme.json
headers/: add_operation.hpp  connection.hpp  delete_operation.hpp  group.hpp  laboratory.hpp  operation.hpp  select_operation.hpp  type.hpp  utils.hpp
sources/: add_operation.cpp  connection.cpp  delete_operation.cpp  group.cpp  laboratory.cpp  main.cpp  operation.cpp  select_operation.cpp  utils.cpp
